// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read csv should get X and y 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 1",
      "type": "string",
      "values": Array [
        "",
        "2",
        "5",
        "",
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 2",
      "type": "number",
      "values": Array [
        1,
        3,
        6,
        NaN,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 3",
      "type": "number",
      "values": Array [
        null,
        4,
        undefined,
        NaN,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 4",
      "type": "number",
      "values": Array [
        null,
        null,
        null,
        7,
      ],
    },
  ],
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv from local file system 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "a",
      "type": "string",
      "values": Array [
        "b",
        "c",
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 2",
      "type": "number",
      "values": Array [
        null,
        null,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv with headers 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 1",
      "type": "string",
      "values": Array [
        "b",
        "c",
        "l",
        "s",
        "s",
        "b",
        "1",
        "2",
        "T",
        "4",
        "5",
        "F",
        "4",
        "5",
        "0",
        "4",
        "5",
        "1",
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 2",
      "type": "string",
      "values": Array [
        null,
        null,
        "e",
        undefined,
        "t",
        "o",
        "0",
        "0",
        "r",
        "0",
        "0",
        "A",
        "0",
        "0",
        undefined,
        "0",
        "0",
        undefined,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 3",
      "type": "string",
      "values": Array [
        null,
        null,
        "n",
        undefined,
        "r",
        "o",
        undefined,
        undefined,
        "u",
        undefined,
        undefined,
        "L",
        undefined,
        "0",
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 4",
      "type": "string",
      "values": Array [
        null,
        null,
        "g",
        undefined,
        "i",
        "l",
        undefined,
        undefined,
        "e",
        undefined,
        undefined,
        "S",
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 5",
      "type": "string",
      "values": Array [
        null,
        null,
        "t",
        undefined,
        "n",
        "e",
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        "E",
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 6",
      "type": "string",
      "values": Array [
        null,
        null,
        "h",
        undefined,
        "g",
        "a",
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 7",
      "type": "string",
      "values": Array [
        null,
        null,
        "m",
        undefined,
        undefined,
        "n",
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
  ],
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;
